// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdDrbm sc-gtcAbF zEzNl klhwKN"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdDrbm sc-gtcAbF kFyyHK klhwKN"
>
  foo
</button>
`;
